--- a/studentsensor-main/package.json
+++ b/studentsensor-main/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bootstrap": "^5.3.7",
     "bootstrap-slider": "^11.0.2",
+    "connect-pg-simple": "^10.0.0",
     "csv-parse": "^6.1.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
